--- a/app/src/main/res/layout/activity_cadastro_sala.xml
+++ b/app/src/main/res/layout/activity_cadastro_sala.xml
@@ -16,7 +16,7 @@
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/txt_nome_view" android:layout_weight="1"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
                 tools:text="Cadastro de Sala" android:textStyle="bold"/>
     </LinearLayout>
@@ -56,13 +56,11 @@
                     android:text="Cancelar"
                     android:layout_width="150dp"
                     android:layout_height="70dp" android:id="@+id/btcancela"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:background="@color/corCinza"
                     android:textColor="@color/corBranca" android:textStyle="bold"
-                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
+                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp"/>
             <Button
                     android:text="Cadastrar"
