--- a/app/src/main/res/layout/activity_cadastro_sessao.xml
+++ b/app/src/main/res/layout/activity_cadastro_sessao.xml
@@ -15,8 +15,8 @@
             android:layout_height="match_parent" android:layout_weight=".9">
         <TextView
                 android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
+                android:layout_width="329dp"
+                android:layout_height="wrap_content" android:id="@+id/txt_nome_view" android:layout_weight="1"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
                 tools:text="Cadastro de Sessão" android:textStyle="bold"/>
     </LinearLayout>
@@ -77,13 +77,23 @@
                 android:layout_height="match_parent">
 
             <Button
+                    android:text="Cancelar"
+                    android:layout_width="206dp"
+                    android:layout_height="84dp" android:id="@+id/btn_cancelar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:background="@color/cardview_shadow_start_color"
+                    android:textColor="@color/corBranca" android:textStyle="bold"
+                    app:layout_constraintHorizontal_bias="0.0"/>
+            <Button
                     android:text="Cadastrar"
-                    android:layout_width="0dp"
-                    android:layout_height="70dp" android:id="@+id/bcadSessao"
+                    android:layout_width="206dp"
+                    android:layout_height="84dp" android:id="@+id/bcadSessao"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" android:background="@color/corPadraoEscura"
-                    android:textColor="@color/corBranca" android:textStyle="bold"/>
+                    android:textColor="@color/corBranca" android:textStyle="bold"
+                    app:layout_constraintHorizontal_bias="1.0"/>
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
