--- a/app/src/main/res/layout/activity_gerencia.xml
+++ b/app/src/main/res/layout/activity_gerencia.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".LoginUsuario">
+        tools:context=".Gerencia">
 
     <LinearLayout
             android:orientation="horizontal"
@@ -17,21 +17,26 @@
         <TextView
                 android:text="Filmes"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight=".2"
+                android:layout_height="wrap_content" android:id="@+id/txt_nome_view" android:layout_weight=".2"
                 android:layout_marginLeft="15dp" android:textSize="24sp" android:textColor="#fff"
                 tools:text="Filmes" android:textStyle="bold"/>
         <ImageView
                 android:src="@drawable/add"
                 android:layout_gravity="right"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/imageView" android:layout_weight=".8"
+                android:layout_height="wrap_content" android:id="@+id/btn_add" android:layout_weight=".8"
                 android:padding="15dp"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:layout_weight=".2" android:id="@+id/linearLayout6"
-            android:gravity="center"/>
+            android:gravity="center">
+        <fragment
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:name="br.unitins.cinema.fragments.FilmeFragment"
+                android:id="@+id/fragment_gerencia"/>
+    </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -41,22 +46,22 @@
         <ImageView
                 android:src="@drawable/movie"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/imageView2" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/btn_filmes" android:layout_weight="1"
                 android:padding="10dp"/>
         <ImageView
                 android:src="@drawable/session"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/imageView3" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/btn_salas" android:layout_weight="1"
                 android:padding="18dp"/>
         <ImageView
                 android:src="@drawable/calendar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/imageView4" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/btn_sessoes" android:layout_weight="1"
                 android:padding="18dp"/>
         <ImageView
                 android:src="@drawable/user"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/imageView5" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/btn_conta" android:layout_weight="1"
                 android:padding="15dp"/>
     </LinearLayout>
 
