--- a/app/src/main/res/layout/activity_cadastro_sala.xml
+++ b/app/src/main/res/layout/activity_cadastro_sala.xml
@@ -54,25 +54,21 @@
 
             <Button
                     android:text="Cancelar"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp" android:id="@+id/btcancela"
+                    android:layout_width="180dp"
+                    android:layout_height="84dp" android:id="@+id/btn_cancelar"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:background="@color/corCinza"
-                    android:textColor="@color/corBranca" android:textStyle="bold"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp"/>
+                    android:textColor="@color/corBranca" android:textStyle="bold"/>
             <Button
                     android:text="Cadastrar"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp" android:id="@+id/btcadSala"
+                    android:layout_width="180dp"
+                    android:layout_height="84dp" android:id="@+id/btcadSala"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/linearLayout5"
                     android:background="@color/corPadraoEscura"
                     android:textColor="@color/corBranca" android:textStyle="bold"
-                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"/>
+                    app:layout_constraintHorizontal_bias="1.0"/>
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
