--- a/app/src/main/res/layout/activity_cadastro_sessao.xml
+++ b/app/src/main/res/layout/activity_cadastro_sessao.xml
@@ -78,16 +78,17 @@
 
             <Button
                     android:text="Cancelar"
-                    android:layout_width="206dp"
+                    android:layout_width="180dp"
                     android:layout_height="84dp" android:id="@+id/btn_cancelar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:background="@color/cardview_shadow_start_color"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:background="@color/cardview_shadow_start_color"
                     android:textColor="@color/corBranca" android:textStyle="bold"
                     app:layout_constraintHorizontal_bias="0.0"/>
             <Button
                     android:text="Cadastrar"
-                    android:layout_width="206dp"
+                    android:layout_width="180dp"
                     android:layout_height="84dp" android:id="@+id/bcadSessao"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
