--- a/app/src/main/res/layout/fragment_sala.xml
+++ b/app/src/main/res/layout/fragment_sala.xml
@@ -11,10 +11,9 @@
             android:background="#fff"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <TextView
+        <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/title_activity_salas"/>
+                android:layout_height="match_parent" android:id="@+id/recycler_lista_sala"/>
     </LinearLayout>
 
 </FrameLayout>
