--- a/app/src/main/res/layout/panel_crud_filme.xml
+++ b/app/src/main/res/layout/panel_crud_filme.xml
@@ -1,7 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="140dp">
+              android:layout_height="wrap_content" android:id="@+id/pnl_lista_crud_filme">
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+        <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" app:cardCornerRadius="5dp" android:layout_margin="6dp"
+                app:cardElevation="4dp">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <android.support.v7.widget.CardView
+                        android:layout_width="90dp"
+                        android:layout_height="match_parent" app:cardCornerRadius="5dp">
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                        <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" app:srcCompat="@mipmap/ic_launcher_round"
+                                android:id="@+id/img_lista_crud_filme"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    <TextView
+                            android:text="Titulo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" android:id="@+id/lbl_lista_crud_filme_titulo"
+                            android:layout_weight="1" android:textAlignment="center" android:textStyle="bold"
+                            android:textSize="20sp"
+                            android:layout_marginLeft="4dp"
+                            android:textColor="@android:color/background_dark" android:layout_margin="4dp"/>
+                    <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:gravity="center"
+                            android:layout_height="match_parent" android:layout_weight="1">
+                        <Button
+                                android:text="Editar"
+                                android:layout_width="wrap_content"
+                                android:layout_height="38dp" android:id="@+id/btn_lista_crud_filme_editar"/>
+                        <Button
+                                android:text="Deletar"
+                                android:layout_width="wrap_content"
+                                android:layout_height="38dp" android:id="@+id/btn_lista_crud_filme_deletar"
+                                android:textColor="#fff"
+                                android:backgroundTint="@color/colorPrimaryDark"
+                        />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 </LinearLayout>
