--- a/app/src/main/res/layout/panel_lista_sessao.xml
+++ b/app/src/main/res/layout/panel_lista_sessao.xml
@@ -2,68 +2,74 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" android:id="@+id/pnl_lista_filme">
+              android:layout_height="120dp" android:id="@+id/pnl_lista_filme">
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <android.support.v7.widget.CardView
-                android:layout_width="312dp"
-                android:layout_height="match_parent">
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="236dp"
-                    android:layout_height="match_parent" android:layout_marginLeft="75dp">
-                <TextView
-                        android:text="titulo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp" android:id="@+id/lbl_lista_sessao_titulo"/>
-                <TextView
-                        android:text="sala"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/lbl_lista_sessao_sala"
-                        android:layout_marginTop="5dp"/>
-                <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:layout_marginTop="5dp">
-                    <TextView
-                            android:text="data"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/lbl_lista_sessao_data"
-                            android:layout_weight=".1"/>
-                    <TextView
-                            android:text="sinopse"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/lbl_lista_sessao_hora"
-                            android:layout_weight=".1"/>
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" app:cardCornerRadius="5dp" android:layout_margin="6dp"
+                app:cardElevation="4dp">
             <LinearLayout
                     android:orientation="horizontal"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" app:srcCompat="@mipmap/ic_launcher_round"
-                        android:id="@+id/img_lista_sessao" android:layout_weight="1"/>
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:gravity="center"
+                        android:layout_height="match_parent" android:layout_weight=".9">
+                    <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@mipmap/ic_launcher_round"
+                            android:id="@+id/img_lista_sessao"
+                            android:layout_weight="1"/>
+                </LinearLayout>
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_marginLeft="10px"
+                        android:layout_height="match_parent" android:layout_weight=".4">
+                    <TextView
+                            android:text="Filme:"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/lbl_lista_sessao_titulo"
+                            android:layout_weight="1"/>
+                    <TextView
+                            android:text="Sala:"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/lbl_lista_sessao_sala"
+                            android:layout_weight="1"/>
+                    <TextView
+                            android:text="Data:"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/lbl_lista_sessao_data"
+                            android:layout_weight="1"/>
+                </LinearLayout>
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:layout_weight=".8">
+                    <Button
+                            android:text="Editar"
+                            android:layout_width="match_parent"
+                            android:layout_height="38dp" android:id="@+id/btn_lista_sessao_editar"/>
+                    <Button
+                            android:text="Deletar"
+                            android:layout_width="match_parent"
+                            android:layout_height="38dp" android:id="@+id/btn_lista_sessao_deletar"
+                            android:textColor="#fff"
+                            android:backgroundTint="@color/colorPrimaryDark"
+                    />
+                </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="93dp"
-                android:layout_height="match_parent" android:layout_marginRight="250dp">
-            <Button
-                    android:text="Editar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/btn_lista_sessao_editar"/>
-            <Button
-                    android:text="Deletar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/btn_lista_sessao_deletar"
-                    android:backgroundTint="@color/colorPrimaryDark" android:drawableTint="@color/corBranca"
-            />
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
